<resources>
    <string name="default_app_client_id">929636309408-mdd88drr9hmtssksh03tereve27gic01.apps.googleusercontent.com</string>
    <string name="app_name">MROC</string>
    <string name="profile">Profile</string>
    <string name="Chat">Chat</string>
    <string name="sender_name">Sender Name</string>
    <string name="chat_bubble_text">Chat Text</string>
    <string name="chat_bubble_time">Time</string>
    <string name="sf_logo">SurveyFiesta Logo</string>

    <string name="user_image">User Image</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="surname">Surname</string>
    <string name="nickname">Nickname</string>
    <string name="cell_number">Cell Number</string>
    <string name="login">Login</string>
    <string name="logout">Log Out</string>
    <string name="create_account">Create Account</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="create">Create</string>
    <string name="undo">Undo</string>
    <string name="leave">Leave</string>
    <string name="new_group">New Group</string>
    <string name="edit_group">Edit Group</string>
    <string name="edit_users">Edit Users</string>
    <string name="group_enabled">Group Enabled</string>
    <string name="set_as_admin">Make Admin</string>
    <string name="set_as_user">Remove as Admin</string>
    <string name="status">Status</string>
    <string name="admin">Admin</string>
    <string name="user">User</string>
    <string name="title">Title</string>
    <string name="description">Description</string>

    <string name="title_description_needed">Please enter something for title and description</string>
    <string name="more">More</string>
    <string name="join">Join</string>
    <string name="join_group">Join Group</string>
    <string name="copied_link">Copied Link</string>
    <string name="loading">Loading</string>
    <string name="group_image">Image or Icon for Group</string>
    <string name="terms_conditions">Terms and Conditions</string>
    <string name="terms_uri">"https://www.surveyfiesta.com/terms-and-conditions/"</string>
    <string name="title_label">{fragmentTitle}</string>
</resources>
