<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="96dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/groupUserLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/groupUserImageView"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/user_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/groupUserDisplayName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/nickname"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/groupUserImageView"
                app:layout_constraintTop_toTopOf="@+id/groupUserImageView" />

            <TextView
                android:id="@+id/groupUserStatusText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/status"
                app:layout_constraintBottom_toBottomOf="@+id/groupUserImageView"
                app:layout_constraintStart_toEndOf="@+id/groupUserImageView" />

            <ImageView
                android:id="@+id/groupUserStatusImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/user"
                app:layout_constraintBottom_toBottomOf="@+id/groupUserImageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:srcCompat="@drawable/ic_baseline_perm_identity_24" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>