<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/listItemMenuLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_baseline_share_24"
            app:iconGravity="textTop"
            android:id="@+id/buttonShareGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_baseline_edit_24"
            app:iconGravity="textTop"
            android:id="@+id/buttonEditGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="46dp"
            android:layout_marginEnd="57dp"
            android:text="@string/edit"
            app:layout_constraintEnd_toStartOf="@+id/buttonDeleteGroup"
            app:layout_constraintStart_toEndOf="@+id/buttonShareGroup"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.Icon"
            app:icon="@drawable/ic_baseline_delete_24"
            app:iconGravity="textTop"
            android:id="@+id/buttonDeleteGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>